--- a/index.html
+++ b/index.html
@@ -283,6 +283,44 @@
         </div>
     </section>
 
+    <section class="blog-section">
+        <div class="container">
+            <div class="section-header">
+                <h4 class="sub-heading">LATEST FROM THE BLOG</h4>
+                <h2 class="main-heading">Our Insights</h2>
+            </div>
+            <div class="blog-grid">
+                <div class="blog-card">
+                    <img src="https://via.placeholder.com/600x400" alt="Blog Post 1" class="blog-image">
+                    <div class="blog-info">
+                        <span class="blog-date">September 10, 2025</span>
+                        <a href="#"><h3 class="blog-title">5 Ways Cloud Computing Can Transform Your Business</h3></a>
+                        <p class="blog-excerpt">Discover how leveraging cloud technology can enhance scalability, reduce costs, and improve data security for your organization.</p>
+                        <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="blog-card">
+                    <img src="https://via.placeholder.com/600x400" alt="Blog Post 2" class="blog-image">
+                    <div class="blog-info">
+                        <span class="blog-date">September 5, 2025</span>
+                        <a href="#"><h3 class="blog-title">The Importance of Cybersecurity in a Digital World</h3></a>
+                        <p class="blog-excerpt">Learn about the most common digital threats and the proactive measures you can take to protect your company's data and reputation.</p>
+                        <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="blog-card">
+                    <img src="https://via.placeholder.com/600x400" alt="Blog Post 3" class="blog-image">
+                    <div class="blog-info">
+                        <span class="blog-date">August 28, 2025</span>
+                        <a href="#"><h3 class="blog-title">IT Solutions vs. Managed Services: What's the Difference?</h3></a>
+                        <p class="blog-excerpt">We break down the key differences to help you decide which approach is the best fit for your business's IT needs and goals.</p>
+                        <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="cta-section">
         <div class="container">
             <div class="cta-content">
