--- a/about.html
+++ b/about.html
@@ -44,11 +44,11 @@
         </nav>
     </header>
 
-    <section class="page-hero-section">
-        <div class="page-hero-content container">
-            <h1>About Us</h1>
-        </div>
-    </section>
+    <section class="page-hero-section about-hero">
+    <div class="page-hero-content container">
+        <h1>About Us</h1>
+    </div>
+</section>
 
     <section class="about-content-section">
         <div class="container about-grid">
