--- a/services.html
+++ b/services.html
@@ -44,11 +44,11 @@
         </nav>
     </header>
 
-    <section class="page-hero-section">
-        <div class="page-hero-content container">
-            <h1>Our Services</h1>
-        </div>
-    </section>
+    <section class="page-hero-section services-hero">
+    <div class="page-hero-content container">
+        <h1>Our Services</h1>
+    </div>
+</section>
 
     <section class="services-detail-section">
         <div class="container">
