--- a/case-study1.html
+++ b/case-study1.html
@@ -44,8 +44,8 @@
         </nav>
     </header>
 
-    <section class="page-hero-section">
-        <div class="page-hero-content container">
+    <section class="page-hero-section case-study-hero">
+    <div class="page-hero-content container">
             <h1>E-commerce Platform</h1>
             <p class="hero-subheading">Building a seamless shopping experience to drive sales and growth.</p>
         </div>
