--- a/case-study2.html
+++ b/case-study2.html
@@ -44,8 +44,8 @@
         </nav>
     </header>
 
-    <section class="page-hero-section">
-        <div class="page-hero-content container">
+    <section class="page-hero-section case-study-hero">
+    <div class="page-hero-content container">
             <h1>Logistics Management App</h1>
             <p class="hero-subheading">Optimizing supply chain efficiency for a leading delivery company.</p>
         </div>
