--- a/case-study3.html
+++ b/case-study3.html
@@ -44,8 +44,8 @@
         </nav>
     </header>
 
-    <section class="page-hero-section">
-        <div class="page-hero-content container">
+<section class="page-hero-section case-study-hero">
+    <div class="page-hero-content container">
             <h1>Cybersecurity Audit</h1>
             <p class="hero-subheading">Strengthening digital defenses and protecting sensitive corporate data.</p>
         </div>
