--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
                 <a href="#" class="btn btn-primary">Callback</a>
