--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
                 <a href="#" class="btn btn-primary">Callback</a>
@@ -370,9 +370,9 @@
                 <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Our Services</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="index.html#contact-us">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -400,4 +400,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
