--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
             <div class="container top-bar-content">
                 <div class="contact-info">
                     <span><i class="fas fa-envelope"></i> pemtechnologysolution@gmail.com</span>
-                    <span><i class="fas fa-phone-alt"></i> 24/7 Support: 08161202291</span>
+                    <span><i class="fas fa-phone-alt"></i> 24/7 Support: +234 816 120 2291</span>
                 </div>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -29,8 +29,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Gallery</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
@@ -43,7 +44,7 @@
         </nav>
     </header>
 
-    <section class="page-hero-section services-hero-page">
+    <section class="page-hero-section">
         <div class="page-hero-content container">
             <h1>Our Services</h1>
         </div>
@@ -51,44 +52,32 @@
 
     <section class="services-detail-section">
         <div class="container">
-            <div class="service-item row-reverse">
-                <div class="service-image">
-                    <img src="https://via.placeholder.com/600x400/18A4E1/FFFFFF?text=Cloud+Solutions" alt="Cloud solutions">
-                </div>
-                <div class="service-text">
-                    <h2 class="sub-heading">Cloud Solutions</h2>
-                    <h3 class="main-heading">Seamlessly Migrate and Manage Your Cloud Infrastructure</h3>
-                    <p>Unlock the power of the cloud with our expert solutions. We help you migrate your data securely, optimize your infrastructure for peak performance, and manage your cloud environment to ensure reliability and cost-effectiveness. Our team is proficient in all major cloud platforms, including AWS, Azure, and Google Cloud.</p>
+            <div class="service-detail-item">
+                <div class="service-detail-icon"><i class="fas fa-tools"></i></div>
+                <div class="service-detail-text">
+                    <h3>Corporate Solutions</h3>
+                    <p>We provide custom software development to streamline your business operations, improve efficiency, and enhance communication. From project management tools to enterprise-level applications, we build solutions that **scale with your growth** and deliver a strong return on investment.</p>
                 </div>
             </div>
-            <div class="service-item">
-                <div class="service-image">
-                    <img src="https://via.placeholder.com/600x400/40C1A7/FFFFFF?text=Cybersecurity" alt="Cybersecurity">
-                </div>
-                <div class="service-text">
-                    <h2 class="sub-heading">Cybersecurity</h2>
-                    <h3 class="main-heading">Protect Your Business from Modern Threats</h3>
-                    <p>In a world of evolving digital threats, safeguarding your assets is non-negotiable. PemTech provides comprehensive cybersecurity services, including security audits, penetration testing, and real-time threat monitoring. We implement robust defense protocols and provide employee training to keep your data and systems secure.</p>
+            <div class="service-detail-item">
+                <div class="service-detail-icon"><i class="fas fa-headset"></i></div>
+                <div class="service-detail-text">
+                    <h3>Call Center Solutions</h3>
+                    <p>Our call center solutions are designed to **optimize your customer service** and provide real-time analytics. We integrate advanced CRM systems and provide automated support to ensure a seamless customer experience and help you make data-driven decisions.</p>
                 </div>
             </div>
-            <div class="service-item row-reverse">
-                <div class="service-image">
-                    <img src="https://via.placeholder.com/600x400/29335C/FFFFFF?text=Software+Development" alt="Software Development">
-                </div>
-                <div class="service-text">
-                    <h2 class="sub-heading">Software Development</h2>
-                    <h3 class="main-heading">Custom Solutions Tailored to Your Business Needs</h3>
-                    <p>When off-the-shelf software won't cut it, we build custom solutions that are a perfect fit for your business. Our development team specializes in creating powerful, scalable, and user-friendly web and mobile applications that streamline operations and drive innovation.</p>
+            <div class="service-detail-item">
+                <div class="service-detail-icon"><i class="fas fa-cloud"></i></div>
+                <div class="service-detail-text">
+                    <h3>Cloud Development</h3>
+                    <p>Harness the power of the cloud with our expert development services. We migrate your existing infrastructure to the cloud or build new, scalable, and **secure cloud-native applications** on platforms like AWS, Azure, and Google Cloud, helping you achieve cost savings and increased agility.</p>
                 </div>
             </div>
-            <div class="service-item">
-                <div class="service-image">
-                    <img src="https://via.placeholder.com/600x400/4F6272/FFFFFF?text=IT+Support" alt="IT Support">
-                </div>
-                <div class="service-text">
-                    <h2 class="sub-heading">Managed IT & Support</h2>
-                    <h3 class="main-heading">Reliable IT Support, So You Can Focus on Your Business</h3>
-                    <p>Our managed IT services provide your business with the proactive support it needs to run smoothly. We handle everything from network maintenance and server management to technical support and help desk services. Our team is available 24/7 to resolve issues and keep your systems online.</p>
+            <div class="service-detail-item">
+                <div class="service-detail-icon"><i class="fas fa-shield-alt"></i></div>
+                <div class="service-detail-text">
+                    <h3>Cybersecurity Services</h3>
+                    <p>Protect your valuable data and infrastructure with our comprehensive cybersecurity services. We offer **vulnerability assessments, penetration testing, and continuous monitoring** to safeguard your business from digital threats and ensure you meet industry compliance standards.</p>
                 </div>
             </div>
         </div>
@@ -103,14 +92,14 @@
             <div class="contact-content">
                 <p>Have a question or a project in mind? We'd love to hear from you. Fill out the form below, and we'll get back to you as soon as possible.</p>
                 
-                <form action="https://formspree.io/f/xldwzvdk" method="POST" class="contact-form">
+                <form action="YOUR_FORMSPREE_ENDPOINT" method="POST" class="contact-form">
                     <div class="form-group">
                         <label for="name">Full Name</label>
                         <input type="text" id="name" name="name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email Address</label>
-                        <input type="email" id="email" name="_replyto" required>
+                        <input type="email" id="email" name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Your Message</label>
@@ -134,15 +123,15 @@
                 <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Our Services</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="index.html#contact-us">Contact Us</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#contact-us">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
                 <h4>Contact Info</h4>
                 <p><i class="fas fa-map-marker-alt"></i> 123 IT Solutions Drive, Lagos, Nigeria</p>
-                <p><i class="fas fa-phone-alt"></i> 08161202291</p>
+                <p><i class="fas fa-phone-alt"></i> +234 816 120 2291</p>
                 <p><i class="fas fa-envelope"></i> pemtechnologysolution@gmail.com</p>
             </div>
             <div class="footer-social">
