--- a/services.html
+++ b/services.html
@@ -44,12 +44,12 @@
         </nav>
     </header>
 
-    <section class="page-hero-section">
-        <div class="page-hero-content container">
-            <h1>Our Services</h1>
-        </div>
-    </section>
-
+    <section class="page-hero-section services-hero">
+    <div class="page-hero-content container">
+        <h1>Our Services</h1>
+    </div>
+  </section>
+    
     <section class="services-detail-section">
         <div class="container">
             <div class="service-detail-item">
@@ -154,3 +154,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
