--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
-                <a href="#" class="btn btn-primary">Callback</a>
+                <a href="#contact-us" class="btn btn-primary">Callback</a>
                 <i class="fas fa-search search-icon"></i>
             </div>
             <div class="hamburger-menu">
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="section-footer">
-                <a href="#" class="btn btn-primary">See All Services <i class="fas fa-arrow-right"></i></a>
+                <a href="services.html" class="btn btn-primary">See All Services <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
     </section>
@@ -144,30 +144,30 @@
             </div>
             <div class="team-grid">
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 1" class="team-photo">
+                    <img src="https://i.ibb.co/XxKJxcGf/team-1.jpg" alt="Team Member 1" class="team-photo">
                     <div class="member-info">
                         <h4>Dr. Alex Carter</h4>
                         <p class="member-title">Founder & CEO</p>
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 2" class="team-photo">
+                    <img src="https://i.ibb.co/0yDq9h1d/team-2.jpg" alt="Team Member 2" class="team-photo">
                     <div class="member-info">
                         <h4>Sarah Lee</h4>
                         <p class="member-title">Lead Software Engineer</p>
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 3" class="team-photo">
+                    <img src="https://i.ibb.co/nMvYLmL8/team-3.jpg" alt="Team Member 3" class="team-photo">
                     <div class="member-info">
                         <h4>David Williams</h4>
                         <p class="member-title">Head of Cloud Solutions</p>
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 4" class="team-photo">
+                    <img src="https://i.ibb.co/KxXmhHVd/profile.jpg" alt="Team Member 4" class="team-photo">
                     <div class="member-info">
-                        <h4>Maria Rodriguez</h4>
+                        <h4>Jeo Paul</h4>
                         <p class="member-title">Senior IT Consultant</p>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                         <p>"We needed a custom software solution for our corporate needs, and PathSoft delivered beyond our expectations. The project was completed on time and within budget. A truly reliable partner."</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://via.placeholder.com/80" alt="Client 2" class="author-photo">
+                        <img src="https://i.ibb.co/pDTFn3g/testimonial-1.jpg" alt="Client 2" class="author-photo">
                         <div class="author-info">
                             <h4>John Smith</h4>
                             <p class="author-title">Director, Global Corp</p>
@@ -236,7 +236,7 @@
                         <p>"The 24/7 support we received from PathSoft was exceptional. They quickly resolved our issues and kept our systems running smoothly. We couldn't be happier with their service."</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://via.placeholder.com/80" alt="Client 3" class="author-photo">
+                        <img src="https://i.ibb.co/wrc8HDM0/testimonial-3.jpg" alt="Client 3" class="author-photo">
                         <div class="author-info">
                             <h4>Emily Chen</h4>
                             <p class="author-title">CTO, Data Systems</p>
@@ -402,3 +402,4 @@
 </body>
 
 </html>
+
