--- a/services.html
+++ b/services.html
@@ -50,34 +50,32 @@
     </div>
   </section>
     
-    <section class="services-detail-section">
+    <section class="about-detail-section">
+        <div class="container about-grid">
+            <div class="about-text-content">
+                <h2 class="sub-heading">WHO WE ARE</h2>
+                <h3 class="main-heading">Empowering Businesses with Cutting-Edge IT Solutions</h3>
+                <p>Founded on the principle of delivering reliable and secure technology solutions, PemTech is a leader in IT consulting and services. Our team of certified professionals is dedicated to helping businesses of all sizes navigate the complexities of the digital world, ensuring they have the tools and support needed to thrive.</p>
+                <p>We believe that technology should be a driver of growth, not a source of frustration. From proactive support to strategic consulting, we are your trusted partner in achieving your business goals.</p>
+            </div>
+            <div class="about-image-content">
+                <img src="https://via.placeholder.com/600x400/40C1A7/FFFFFF?text=Our+Team" alt="Our Team">
+            </div>
+        </div>
+    </section>
+
+    <section class="mission-vision-section">
         <div class="container">
-            <div class="service-detail-item">
-                <div class="service-detail-icon"><i class="fas fa-tools"></i></div>
-                <div class="service-detail-text">
-                    <h3>Corporate Solutions</h3>
-                    <p>We provide custom software development to streamline your business operations, improve efficiency, and enhance communication. From project management tools to enterprise-level applications, we build solutions that **scale with your growth** and deliver a strong return on investment.</p>
+            <div class="mission-vision-grid">
+                <div class="mission-card">
+                    <div class="icon-circle"><i class="fas fa-bullseye"></i></div>
+                    <h4>Our Mission</h4>
+                    <p>To provide innovative, scalable, and secure IT solutions that empower businesses to operate efficiently, protect their data, and achieve sustainable growth in a rapidly changing technological landscape.</p>
                 </div>
-            </div>
-            <div class="service-detail-item">
-                <div class="service-detail-icon"><i class="fas fa-headset"></i></div>
-                <div class="service-detail-text">
-                    <h3>Call Center Solutions</h3>
-                    <p>Our call center solutions are designed to **optimize your customer service** and provide real-time analytics. We integrate advanced CRM systems and provide automated support to ensure a seamless customer experience and help you make data-driven decisions.</p>
-                </div>
-            </div>
-            <div class="service-detail-item">
-                <div class="service-detail-icon"><i class="fas fa-cloud"></i></div>
-                <div class="service-detail-text">
-                    <h3>Cloud Development</h3>
-                    <p>Harness the power of the cloud with our expert development services. We migrate your existing infrastructure to the cloud or build new, scalable, and **secure cloud-native applications** on platforms like AWS, Azure, and Google Cloud, helping you achieve cost savings and increased agility.</p>
-                </div>
-            </div>
-            <div class="service-detail-item">
-                <div class="service-detail-icon"><i class="fas fa-shield-alt"></i></div>
-                <div class="service-detail-text">
-                    <h3>Cybersecurity Services</h3>
-                    <p>Protect your valuable data and infrastructure with our comprehensive cybersecurity services. We offer **vulnerability assessments, penetration testing, and continuous monitoring** to safeguard your business from digital threats and ensure you meet industry compliance standards.</p>
+                <div class="vision-card">
+                    <div class="icon-circle"><i class="fas fa-eye"></i></div>
+                    <h4>Our Vision</h4>
+                    <p>To be the leading IT solutions provider in Nigeria, recognized for our exceptional service, technical expertise, and unwavering commitment to our clients' success.</p>
                 </div>
             </div>
         </div>
@@ -154,4 +152,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
