--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <div class="testimonial-author">
                         <img src="https://i.ibb.co/wrc8HDM0/testimonial-3.jpg" alt="Client 3" class="author-photo">
                         <div class="author-info">
-                            <h4>Emily Chen</h4>
+                            <h4>John Doe</h4>
                             <p class="author-title">CTO, Data Systems</p>
                         </div>
                     </div>
@@ -402,5 +402,6 @@
 </body>
 
 </html>
+
 
 
