Update and rename blog-post.html to blog-post1.html

--- a/blog-post1.html
+++ b/blog-post1.html
@@ -54,7 +54,7 @@
     <section class="single-post-content">
         <div class="container">
             <div class="post-main-image">
-                <img src="https://via.placeholder.com/1200x600" alt="Cloud computing image">
+                <img src="cloud computing.png" alt="Cloud computing image">
             </div>
             <p>In today's fast-paced digital landscape, businesses are constantly looking for ways to stay competitive, agile, and efficient. The answer for many lies in the cloud. Cloud computing is no longer a luxury but a fundamental tool for modern businesses.</p>
             <p>Here are five ways that leveraging the cloud can revolutionize your business operations, whether you're a startup or a large enterprise.</p>
@@ -118,7 +118,7 @@
                 <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Our Services</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="index.html#contact-us">Contact Us</a></li>
                 </ul>
