--- a/blog.html
+++ b/blog.html
@@ -52,30 +52,30 @@
         <div class="container blog-page-grid">
             <main class="main-blog-posts">
                 <div class="blog-card">
-                    <img src="https://via.placeholder.com/600x400" alt="Blog Post 1" class="blog-image">
+                    <img src="cloud computing.png/600x400" alt="Blog Post 1" class="blog-image">
                     <div class="blog-info">
                         <span class="blog-date">September 10, 2025</span>
-                        <a href="blog-post.html"><h3 class="blog-title">5 Ways Cloud Computing Can Transform Your Business</h3></a>
+                        <a href="blog-post1.html"><h3 class="blog-title">5 Ways Cloud Computing Can Transform Your Business</h3></a>
                         <p class="blog-excerpt">Discover how leveraging cloud technology can enhance scalability, reduce costs, and improve data security for your organization.</p>
-                        <a href="blog-post.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                        <a href="blog-post1.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="blog-card">
-                    <img src="https://via.placeholder.com/600x400" alt="Blog Post 2" class="blog-image">
+                    <img src="cybersecurity.png/600x400" alt="Blog Post 2" class="blog-image">
                     <div class="blog-info">
                         <span class="blog-date">September 5, 2025</span>
-                        <a href="blog-post.html"><h3 class="blog-title">The Importance of Cybersecurity in a Digital World</h3></a>
+                        <a href="blog-post2.html"><h3 class="blog-title">The Importance of Cybersecurity in a Digital World</h3></a>
                         <p class="blog-excerpt">Learn about the most common digital threats and the proactive measures you can take to protect your company's data and reputation.</p>
-                        <a href="blog-post.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                        <a href="blog-post2.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="blog-card">
-                    <img src="https://via.placeholder.com/600x400" alt="Blog Post 3" class="blog-image">
+                    <img src="messy vs orgaanised IT management.png/600x400" alt="Blog Post 3" class="blog-image">
                     <div class="blog-info">
                         <span class="blog-date">August 28, 2025</span>
-                        <a href="blog-post.html"><h3 class="blog-title">IT Solutions vs. Managed Services: What's the Difference?</h3></a>
+                        <a href="blog-post3.html"><h3 class="blog-title">IT Solutions vs. Managed Services: What's the Difference?</h3></a>
                         <p class="blog-excerpt">We break down the key differences to help you decide which approach is the best fit for your business's IT needs and goals.</p>
-                        <a href="blog-post.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                        <a href="blog-post3.html" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </main>
@@ -92,9 +92,9 @@
                 <div class="sidebar-widget">
                     <h4>Recent Posts</h4>
                     <ul>
-                        <li><a href="blog-post.html">5 Ways Cloud Computing...</a></li>
-                        <li><a href="blog-post.html">The Importance of Cybersecurity...</a></li>
-                        <li><a href="blog-post.html">IT Solutions vs. Managed Services...</a></li>
+                        <li><a href="blog-post1.html">5 Ways Cloud Computing...</a></li>
+                        <li><a href="blog-post2.html">The Importance of Cybersecurity...</a></li>
+                        <li><a href="blog-post3.html">IT Solutions vs. Managed Services...</a></li>
                     </ul>
                 </div>
             </aside>
@@ -141,7 +141,7 @@
                 <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Our Services</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="index.html#contact-us">Contact Us</a></li>
                 </ul>
