--- a/services.html
+++ b/services.html
@@ -29,9 +29,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="blog.html">Blog</a></li
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
@@ -59,7 +58,7 @@
                 <p>We believe that technology should be a driver of growth, not a source of frustration. From proactive support to strategic consulting, we are your trusted partner in achieving your business goals.</p>
             </div>
             <div class="about-image-content">
-                <img src="https://via.placeholder.com/600x400/40C1A7/FFFFFF?text=Our+Team" alt="Our Team">
+                <img src="IT Team.png" alt="Our Team">
             </div>
         </div>
     </section>
@@ -90,7 +89,7 @@
             <div class="contact-content">
                 <p>Have a question or a project in mind? We'd love to hear from you. Fill out the form below, and we'll get back to you as soon as possible.</p>
                 
-                <form action="YOUR_FORMSPREE_ENDPOINT" method="POST" class="contact-form">
+                <form action="https://formspree.io/f/xldwzvdk" method="POST" class="contact-form">
                     <div class="form-group">
                         <label for="name">Full Name</label>
                         <input type="text" id="name" name="name" required>
@@ -121,8 +120,8 @@
                 <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Our Services</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#contact-us">Contact Us</a></li>
                 </ul>
             </div>
@@ -152,5 +151,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
