--- a/about.html
+++ b/about.html
@@ -29,9 +29,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
@@ -55,9 +54,9 @@
             <div class="about-text">
                 <h4 class="sub-heading">OUR STORY</h4>
                 <h2 class="main-heading">PemTech: Your IT Partner</h2>
-                <p>Founded on the principles of **innovation and integrity**, PemTech has been at the forefront of the IT solutions industry for over a decade. Our journey began with a simple mission: to empower businesses of all sizes with the technology they need to succeed in a digital world.</p>
-                <p>We believe in building long-term **partnerships with our clients**, offering not just a product, but a complete solution that is tailored to their unique challenges. Our team of certified professionals is dedicated to providing cutting-edge solutions in cloud computing, cybersecurity, and custom software development.</p>
-                <p>We're committed to the success of our clients. That's why we focus on delivering **scalable and future-proof solutions** that adapt as your business grows. We're not just a vendor; we're a trusted partner you can rely on.</p>
+                <p>Founded on the principles of <b>innovation and integrity</b>, PemTech has been at the forefront of the IT solutions industry for over a decade. Our journey began with a simple mission: to empower businesses of all sizes with the technology they need to succeed in a digital world.</p>
+                <p>We believe in building long-term <b>partnerships with our clients</b>, offering not just a product, but a complete solution that is tailored to their unique challenges. Our team of certified professionals is dedicated to providing cutting-edge solutions in cloud computing, cybersecurity, and custom software development.</p>
+                <p>We're committed to the success of our clients. That's why we focus on delivering <b>scalable and future-proof solutions</b> that adapt as your business grows. We're not just a vendor; we're a trusted partner you can rely on.</p>
                 <a href="services.html" class="btn btn-primary">Our Services <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="about-image">
@@ -74,28 +73,28 @@
             </div>
             <div class="team-grid">
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 1" class="team-photo">
+                    <img src="https://i.ibb.co/XxKJxcGf/team-1.jpg" alt="Team Member 1" class="team-photo">
                     <div class="member-info">
                         <h4>Dr. Alex Carter</h4>
                         <p class="member-title">Founder & CEO</p>
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 2" class="team-photo">
+                    <img src="https://i.ibb.co/0yDq9h1d/team-2.jpg" alt="Team Member 2" class="team-photo">
                     <div class="member-info">
                         <h4>Sarah Lee</h4>
                         <p class="member-title">Lead Software Engineer</p>
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 3" class="team-photo">
+                    <img src="https://i.ibb.co/nMvYLmL8/team-3.jpg" alt="Team Member 3" class="team-photo">
                     <div class="member-info">
                         <h4>David Williams</h4>
                         <p class="member-title">Head of Cloud Solutions</p>
                     </div>
                 </div>
                 <div class="team-member-card">
-                    <img src="https://via.placeholder.com/250" alt="Team Member 4" class="team-photo">
+                    <img src="https://i.ibb.co/KxXmhHVd/profile.jpg" alt="Team Member 4" class="team-photo">
                     <div class="member-info">
                         <h4>Maria Rodriguez</h4>
                         <p class="member-title">Senior IT Consultant</p>
@@ -145,8 +144,8 @@
                 <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Our Services</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#contact-us">Contact Us</a></li>
                 </ul>
             </div>
@@ -175,4 +174,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
