--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
         <div class="container blog-page-grid">
             <main class="main-blog-posts">
                 <div class="blog-card">
-                    <img src="cloud computing.png/600x400" alt="Blog Post 1" class="blog-image">
+                    <img src="cloud computing.png" alt="Blog Post 1" class="blog-image">
                     <div class="blog-info">
                         <span class="blog-date">September 10, 2025</span>
                         <a href="blog-post1.html"><h3 class="blog-title">5 Ways Cloud Computing Can Transform Your Business</h3></a>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="blog-card">
-                    <img src="cybersecurity.png/600x400" alt="Blog Post 2" class="blog-image">
+                    <img src="cybersecurity.png" alt="Blog Post 2" class="blog-image">
                     <div class="blog-info">
                         <span class="blog-date">September 5, 2025</span>
                         <a href="blog-post2.html"><h3 class="blog-title">The Importance of Cybersecurity in a Digital World</h3></a>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="blog-card">
-                    <img src="messy vs orgaanised IT management.png/600x400" alt="Blog Post 3" class="blog-image">
+                    <img src="messy vs orgaanised IT management.png" alt="Blog Post 3" class="blog-image">
                     <div class="blog-info">
                         <span class="blog-date">August 28, 2025</span>
                         <a href="blog-post3.html"><h3 class="blog-title">IT Solutions vs. Managed Services: What's the Difference?</h3></a>
