--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                 <a href="services.html" class="btn btn-primary">Our Services <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="about-image">
-                <img src="https://via.placeholder.com/600x400" alt="About PemTech">
+                <img src="pemtech.png" alt="About PemTech">
             </div>
         </div>
     </section>
@@ -176,3 +176,4 @@
 </body>
 
 </html>
+
