--- a/services.html
+++ b/services.html
@@ -30,7 +30,8 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
-                <li><a href="blog.html">Blog</a></li
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
@@ -151,6 +152,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
