--- a/case-study1.html
+++ b/case-study1.html
@@ -29,9 +29,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="blog.html">Blog</a></li>
+               <li><a href="faq.html">FAQ</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
@@ -173,4 +172,5 @@
     
     <script src="script.js"></script>
 </body>
+
 </html>
