--- a/blog-post1.html
+++ b/blog-post1.html
@@ -30,6 +30,7 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
