--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
             </ul>
             <div class="nav-actions">
@@ -176,4 +177,5 @@
 </body>
 
 </html>
+
 
