--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,7 @@
         </nav>
     </header>
 
-    <section class="page-hero-section faq-hero-page">
+        <section class="page-hero-section blog-hero">
         <div class="page-hero-content container">
             <h1>Frequently Asked Questions</h1>
         </div>
